--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -1,4 +1,4 @@
-spring.datasource.url = jdbc:postgres://wikezqvo:yDUNq7n2KiSZ_fjoWSaCh_NDwEEjs7fM@echo.db.elephantsql.com:5432/wikezqvo
+spring.datasource.url = jdbc:postgresql://echo.db.elephantsql.com:5432/wikezqvo
 spring.datasource.username = wikezqvo
 spring.datasource.password = yDUNq7n2KiSZ_fjoWSaCh_NDwEEjs7fM
 spring.database.driverClassName=org.postgresql.Driver
