--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -1,6 +1,6 @@
-spring.datasource.url = jdbc:postgresql://echo.db.elephantsql.com:5432/wikezqvo
-spring.datasource.username = wikezqvo
-spring.datasource.password = yDUNq7n2KiSZ_fjoWSaCh_NDwEEjs7fM
+spring.datasource.url = jdbc:postgresql://echo-01.db.elephantsql.com:5432/qrugbgeo
+spring.datasource.username = qrugbgeo
+spring.datasource.password = PQ8WGLhJqW9jm8H651VVLSJlPvPzRoiu
 spring.database.driverClassName=org.postgresql.Driver
 spring.datasource.testWhileIdle = true
 spring.datasource.validationQuery = SELECT 1
