--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -6,3 +6,10 @@ spring.datasource.testWhileIdle = true
 spring.datasource.validationQuery = SELECT 1
 spring.jpa.show-sql = true
 server.port = 8100
+spring.datasource.initial-size=1
+spring.datasource.max-active=3
+spring.datasource.log-abandoned=true
+spring.datasource.max-idle=1
+spring.datasource.min-idle=0
+spring.datasource.remove-abandoned=true
+spring.datasource.remove-abandoned-timeout=300
